--- a/src/app/modules/reports/viewreports.component.html
+++ b/src/app/modules/reports/viewreports.component.html
@@ -1,18 +1,22 @@
 <div class="breadcrumb-nav">
     <div class="row margin-zero">
         <div class="col s12">
-            <h5>{{selectedReport}} Report</h5>
+            <h5>{{selectedReport}} Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
         </div>
     </div>
 </div>
+
+
 <div class="row  m-bottom0 report-container">
-    <div class="row back-btn-reports" *ngIf="selectedReport=='LeaveSummary' || selectedReport=='LeaveDetail' ">
+    <div class="row back-btn-reports" *ngIf="selectedReport=='LeaveSummary' || selectedReport=='LeaveDetail' || selectedReport=='LeaveTransaction' ">
         <div class="col s12 padding-zero">
             <a (click)="BackToLeaveReport($event)" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to Leave Report" aria-hidden="true"></i>Back</a>
         </div>
     </div>
-
     <div *ngIf="selectedReport=='Leaves'" class="row">
+        <!-- <a (click)="SetLeaveReport($event,'LeaveSummary')" class="btn waves-effect waves-light">Leave Summary</a>
+        <a (click)="SetLeaveReport($event,'LeaveDetail')" class="btn waves-effect waves-light">Leave Detail</a>-->
         <div class="grey-bg-wrapper">
             <div class="help-container">
                 <div class="help-content-wrapper m-top20">
@@ -57,6 +61,25 @@
                                         </div>
                                         <div class="data-footer">
                                             <a (click)="SetLeaveReport($event,'LeaveSummary')" class="btn-flat">Leave Ledger Summary Report</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col s12 m6 l3">
+                                    <div class="card padding-zero margin-zero">
+                                        <div class="row heading-content">
+                                            <div class="col s12 card-heading m-top20">
+                                                <span class="card-title">Leave Transaction</span>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col s12">
+                                                <div class="view-form-info">
+                                                    <p></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="data-footer">
+                                            <a (click)="SetLeaveReport($event,'LeaveTransaction')" class="btn-flat">Leave Transaction Report</a>
                                         </div>
                                     </div>
                                 </div>
@@ -125,7 +148,7 @@
             <div class="row m-bottom0 valign-wrapper">
                 <div class="col s12 l6">
                     <ui-form #empDetailsForm [controlMetas]="empDetailHub" [(model)]="empDetailReportModel" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
-                        formCss='view-card' columnOrientation='5' controlCss='view-form-info' inputLabelPosition='top'>
+                        formCss='view-card' columnOrientation='3' controlCss='view-form-info' inputLabelPosition='top'>
                     </ui-form>
                 </div>
                 <div class="col s12 l6">
@@ -139,12 +162,12 @@
                         <div class="row">
                             <div class="col s12 l2 padding-zero">
                                 <div class="view-form-info" *ngFor="let s of empDetailHub[0].options">
-                                    <h5 *ngIf='s.id==empDetailReportModel.EmploymentStatus'>{{s.text}}</h5>
-                                    <h6 *ngIf='s.id==empDetailReportModel.EmploymentStatus'>Employment Status</h6>
+                                    <h5 *ngIf='empDetailReportModel.EmploymentStatus != null && empDetailReportModel.EmploymentStatus.indexOf(s.id) > -1'>{{s.text}}</h5>
                                 </div>
+                                <h6 class='rptlable' *ngIf='empDetailReportModel.EmploymentStatus !=null'>Employment Status</h6>
                                 <div class="view-form-info">
-                                    <h5 *ngIf='empDetailReportModel.EmploymentStatus==""'>All</h5>
-                                    <h6 *ngIf='empDetailReportModel.EmploymentStatus==""'>Employment Status</h6>
+                                    <h5 *ngIf='empDetailReportModel.EmploymentStatus==null'>All</h5>
+                                    <h6 *ngIf='empDetailReportModel.EmploymentStatus==null'>Employment Status</h6>
                                 </div>
                             </div>
                             <div class="col s12 l2 padding-zero">
@@ -153,28 +176,28 @@
                                     <h6 *ngIf='a.id==empDetailReportModel.EmployeeStatus'>Employee Status</h6>
                                 </div>
                                 <div class="view-form-info">
-                                    <h5 *ngIf='empDetailReportModel.EmployeeStatus==""'>All</h5>
-                                    <h6 *ngIf='empDetailReportModel.EmployeeStatus==""'>Employee Status</h6>
+                                    <h5 *ngIf='empDetailReportModel.EmployeeStatus==null'>All</h5>
+                                    <h6 *ngIf='empDetailReportModel.EmployeeStatus==null'>Employee Status</h6>
                                 </div>
                             </div>
                             <div class="col s12 l2 padding-zero">
                                 <div class="view-form-info" *ngFor="let p of empDetailHub[2].options">
-                                    <h5 *ngIf='p.id==empDetailReportModel.DeliveryUnit'>{{p.text}}</h5>
-                                    <h6 *ngIf='p.id==empDetailReportModel.DeliveryUnit'>Delivery Unit</h6>
+                                    <h5 *ngIf='empDetailReportModel.DeliveryUnit !=null &&empDetailReportModel.DeliveryUnit.indexOf(p.id) > -1'>{{p.text}}</h5>
                                 </div>
+                                <h6 class='rptlable' *ngIf='empDetailReportModel.DeliveryUnit !=null'>Delivery Unit</h6>
                                 <div class="view-form-info">
-                                    <h5 *ngIf='empDetailReportModel.DeliveryUnit==""'>All</h5>
-                                    <h6 *ngIf='empDetailReportModel.DeliveryUnit==""'>Delivery Unit</h6>
+                                    <h5 *ngIf='empDetailReportModel.DeliveryUnit==null'>All</h5>
+                                    <h6 *ngIf='empDetailReportModel.DeliveryUnit==null'>Delivery Unit</h6>
                                 </div>
                             </div>
                             <div class="col s12 l2 padding-zero">
                                 <div class="view-form-info" *ngFor="let r of empDetailHub[3].options">
-                                    <h5 *ngIf='r.id==empDetailReportModel.DeliveryTeam'>{{r.text}}</h5>
-                                    <h6 *ngIf='r.id==empDetailReportModel.DeliveryTeam'>Delivery Team</h6>
+                                    <h5 *ngIf='empDetailReportModel.DeliveryTeam !=null && empDetailReportModel.DeliveryTeam.indexOf(r.id) > -1'>{{r.text}}</h5>
                                 </div>
+                                <h6 class='rptlable' *ngIf='empDetailReportModel.DeliveryTeam !=null'>Delivery Team</h6>
                                 <div class="view-form-info">
-                                    <h5 *ngIf='empDetailReportModel.DeliveryTeam==""'>All</h5>
-                                    <h6 *ngIf='empDetailReportModel.DeliveryTeam==""'>Delivery Team</h6>
+                                    <h5 *ngIf='empDetailReportModel.DeliveryTeam==null'>All</h5>
+                                    <h6 *ngIf='empDetailReportModel.DeliveryTeam==null'>Delivery Team</h6>
                                 </div>
                             </div>
                             <div class="col s12 l2 padding-zero">
@@ -240,6 +263,56 @@
         </div>
     </div>
 
+    <div *ngIf="selectedReport=='LeaveTransaction'" class="row m-bottom0 header m-top20">
+        <div class="col s12 padding-zero">
+            <div class="row m-bottom0 valign-wrapper">
+                <div class="col s12 l6">
+                    <ui-form #LeaveTransactionForm [controlMetas]="leavetransHub" [(model)]="leavetrans" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
+                        formCss='view-card' columnOrientation='3' controlCss='view-form-info' inputLabelPosition='top'>
+                    </ui-form>
+                </div>
+                <div class="col s12 l6">
+                    <!--<a (click)="ViewReport($event,leavetrans,LeaveTransactionForm)" class="btn waves-effect waves-light custom-btn save-as-draft">Get Report</a>-->
+                </div>
+            </div>
+            <div class="row m-bottom10" *ngIf="showCriteria">
+                <div class="col s12">
+                    <div class="report-details">
+                        <h5>Report Criteria</h5>
+                        <div class="row">
+                            <div class="col s12 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5>{{leavetrans.UserID}}</h5>
+                                    <h6 *ngIf="leavetrans.UserID">UserID</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 l2 padding-zero">
+                                <div class="view-form-info" *ngFor="let p of leavetransHub[1].options">
+                                    <h5 *ngIf='p.id==leavetrans.Location'>{{p.text}}</h5>
+                                    <h6 *ngIf='p.id==leavetrans.Location'>Location</h6>
+                                </div>
+                                <div class="view-form-info">
+                                    <h5 *ngIf='leavetrans.Location==""'>All</h5>
+                                    <h6 *ngIf='leavetrans.Location==""'>Location</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 l2 padding-zero">
+                                <div class="view-form-info" *ngFor="let r of leavetransHub[2].options">
+                                    <h5 *ngIf='r.id==leavetrans.DeliveryUnit'>{{r.text}}</h5>
+                                    <h6 *ngIf='r.id==leavetrans.DeliveryUnit'>Delivery Unit</h6>
+                                </div>
+                                <div class="view-form-info">
+                                    <h5 *ngIf='leavetrans.DeliveryUnit==""'>All</h5>
+                                    <h6 *ngIf='leavetrans.DeliveryUnit==""'>Delivery Unit</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div *ngIf="selectedReport=='LeaveDetail'" class="row m-bottom0 header m-top20">
         <div class="col s12 padding-zero">
             <div class="row m-bottom0 valign-wrapper">
@@ -289,6 +362,91 @@
         </div>
     </div>
 
+    <div *ngIf="selectedReport=='Helpdesk'" class="row m-bottom0 header m-top20">
+        <div class="col s12 padding-zero">
+            <div class="row m-bottom0 valign-wrapper">
+                <div class="col s12 l6">
+                    <ui-form #HelpdeskForm [controlMetas]="hlpdeskhub" [(model)]="helpdesk" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
+                        formCss='view-card' columnOrientation='5' controlCss='view-form-info'>
+                        <ui-control-item for='issuestartdate' behaviours='[ {"name":"max","value":"{{helpdesk.issueenddate}}:mm/dd/yyyy:1"}]' depends='["issueenddate:changeattrs"]'
+                            changeattrs='["max"]'>
+                        </ui-control-item>
+
+                        <ui-control-item for='issueenddate' behaviours='[ {"name":"min","value":"{{helpdesk.issuestartdate}}:mm/dd/yyyy"}]' depends='["issuestartdate:changeattrs"]'
+                            changeattrs='["min"]'>
+                        </ui-control-item>
+
+                        <ui-control-item for='reportstartdate' behaviours='[ {"name":"max","value":"{{helpdesk.reportenddate}}:mm/dd/yyyy:1"}]' depends='["reportenddate:changeattrs"]'
+                            changeattrs='["max"]'>
+                        </ui-control-item>
+
+                        <ui-control-item for='reportenddate' behaviours='[ {"name":"min","value":"{{helpdesk.reportstartdate}}:mm/dd/yyyy"}]' depends='["reportstartdate:changeattrs"]'
+                            changeattrs='["min"]'>
+                        </ui-control-item>
+                    </ui-form>
+                </div>
+                <div class="col s12 l6">
+                    <a (click)="ViewReport($event,helpdesk,HelpdeskForm)" class="btn waves-effect waves-light custom-btn save-as-draft">Get Report</a>
+                </div>
+            </div>
+            <div class="row m-bottom10" *ngIf="showCriteria">
+                <div class="col s12">
+                    <div class="report-details">
+                        <h5>Report Criteria</h5>
+                        <div class="row">
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="helpdesk.issuestartdate">{{helpdesk.issuestartdate}}</h5>
+                                    <h6 *ngIf="helpdesk.issuestartdate">Issue Start Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="helpdesk.issueenddate">{{helpdesk.issueenddate}}</h5>
+                                    <h6 *ngIf="helpdesk.issueenddate">Issue End Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="helpdesk.reportstartdate">{{helpdesk.reportstartdate}}</h5>
+                                    <h6 *ngIf="helpdesk.reportstartdate">Report Start Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="helpdesk.reportenddate">{{helpdesk.reportenddate}}</h5>
+                                    <h6 *ngIf="helpdesk.reportenddate">Report End Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 l2 padding-zero">
+                                <div class="view-form-info" *ngFor="let r of hlpdeskhub[0].options">
+                                    <h5 *ngIf='r.id==helpdesk.category'>{{r.text}}</h5>
+                                    <h6 *ngIf='r.id==helpdesk.category'>Category</h6>
+                                </div>
+                                <div class="view-form-info">
+                                    <h5 *ngIf='helpdesk.category==""'>All</h5>
+                                    <h6 *ngIf='helpdesk.category==""'>Category</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row available-leaves m-bottom0" *ngIf="selectedReport=='Helpdesk'">
+        <div class="col s4 center-align leave-data" *ngIf="showCriteria"><h5>Tickets(Type wise)</h5>
+            <doughnut-chart [data]="typeChartData" [labels]="typeChartlabels" [colors]="typeChartColors"></doughnut-chart>
+        </div>
+        <div class="col s4 center-align leave-data" *ngIf="showCriteria"><h5>Issue Status</h5>
+            <doughnut-chart [data]="statusChartData" [labels]="statusChartlabels" [colors]="statusChartColors"></doughnut-chart>
+        </div>
+        <div class="col s4 center-align leave-data" *ngIf="showCriteria"><h5>Ticket Reporting Trend</h5>
+          	<line-bar-chart [data]="lineChartData" [labels]="lineChartLabels" [colors]="lineChartChartColors" [chartType]="'line'"></line-bar-chart>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col s12 table-data-wrapper">
             <div class="table-container padding-zero m-top20">
@@ -317,8 +475,18 @@
                                 </tbody>
                             </table>
                         </div>
+
+                        <!--<basic-grid [(source)]='reportData' gridPagination='bottom' gridOptions='{"colWidths":[{{colWidths}}],"widthType":"%","useScroll":true,"isHorizontalScroll":true}'>
+
+                            <basic-cell cell='' *ngFor="let p of headers" headerLabel={{p|capitalize}}>
+                                <template let-item='row'>
+                                    <div>{{item[p]}}</div>
+                                </template>
+                            </basic-cell>
+
+                        </basic-grid>-->
                     </div>
-                    <div class="no-data-div" *ngIf="reportData.length == 0 && selectedReport !='Leaves'">
+                    <div class="no-data-div" *ngIf="reportData.length == 0 && selectedReport !='Leaves' && showCriteria ">
                         <span class="no-data">No data available.</span>
                     </div>
                 </div>
