helpdesk report and multiselect dropdown changes

--- a/src/app/modules/reports/viewreports.component.html
+++ b/src/app/modules/reports/viewreports.component.html
@@ -272,7 +272,7 @@
                     </ui-form>
                 </div>
                 <div class="col s12 l6">
-                    <!--<a (click)="ViewReport($event,leavetrans,LeaveTransactionForm)" class="btn waves-effect waves-light custom-btn save-as-draft">Get Report</a>-->
+                    <a (click)="ViewReport($event,leavetrans,LeaveTransactionForm)" class="btn waves-effect waves-light custom-btn save-as-draft">Get Report</a>
                 </div>
             </div>
             <div class="row m-bottom10" *ngIf="showCriteria">
@@ -452,7 +452,7 @@
             <div class="table-container padding-zero m-top20">
                 <div class="row m-bottom5">
                     <div class="col s12 " *ngIf="reportData.length>0">
-                        <div id="table-scroll" style="height:auto; overflow:auto; max-height:500px;">
+                        <div id="table-scroll" style="height:auto; overflow:auto; max-height:450px;">
                             <table class="striped responsive-table" style="width:100%;">
                                 <thead class="same-width-thead thead-custom-style reports-card">
                                     <tr>
