--- a/src/app/modules/leave/leave.component.html
+++ b/src/app/modules/leave/leave.component.html
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 			<div class="row available-leaves m-bottom0">
-				<div class="col s12 center-align leave-data">
+				<div class="col s12 center-align leave-data"  style="display: flex;justify-content: center;">
 					<doughnut-chart [data]="leaveChartData" [labels]="leaveChartlabels" [colors]="leaveChartColors"></doughnut-chart>
 				</div>
 			</div>
