Leave details and leave transaction report UI Change

--- a/src/app/modules/reports/reportslist.component.html
+++ b/src/app/modules/reports/reportslist.component.html
@@ -25,9 +25,9 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Attendance<i class="material-icons right">close</i></span>
-              <p>You can generate your Monthly Attendance reports that consists of total number of days in a month, Present Days (P), Absent days, (A), Leaves (L), Holidays (H) and Week offs (W).<br> Monthly Attendance report gets freezed on 22nd of every month.</p>
+              <p>You can generate your Monthly Attendance reports that consists of total number of days in a month, Present Days (P), Absent days, (A), Leaves (L), Holidays (H) and Week offs (W).<br> Monthly Attendance gets freezed on 22nd of every month.</p>
             </div>
-            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Attendance">Attendence Report</a></div>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Attendance">Attendance Report</a></div>
             <div class=""></div>
           </div>
         </div>
@@ -62,7 +62,7 @@
               <p>Leave reports provide you detailed insights about leaves applied, leave plans and balance available. Additionally, you can also find Leave Ledger Report and Leave Transaction Report. Select any specific date range/Delivery Unit or filters available for particular Reports.</p>
             </div>
             <div class="card-action">
-              <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'Leaves'}]" >Leaves Report</a></button>
+              <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'Leaves'}]" >Leave Report</a></button>
             </div>
             <div class=""></div>
           </div>
