--- a/src/app/modules/leave/leave.component.html
+++ b/src/app/modules/leave/leave.component.html
@@ -204,7 +204,7 @@
 			</div>
 			<div class="row" *ngIf="rowData.length > 0 && !searchUser">
 				<div class="col s12 table-note">
-					<span><i class="pending-msg fa fa-pencil"></i>Only pending entries will be editable.</span>
+					<span><i class="pending-msg fa fa-pencil"></i>Only future date pending entries will be editable.</span>
 				</div>
 			</div>
 			<div class="row" *ngIf="rowData.length == 0">
