--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -243,9 +243,8 @@
                                     </div>
                                 </div>
                                 <div *ngIf="flightDetails.length > 0" class="scrollable-flight-options">
-                                    <repeater [source]="flightDetails">
-                                        <template let-item="item">
-                                            <div class="row">
+                                    <div *ngFor="let item of flightDetails">
+                                        <div class="row">
                                                 <div class="col s12">
                                                     <div class="card white travel-card margin-zero padding-zero">
                                                         <div class="row valign-wrapper margin-zero m-top20">
@@ -613,8 +612,8 @@
                                                 </div>
                                             </div>
 
-                                        </template>
-                                    </repeater>
+                                        
+                                    </div>
                                 </div>
                             </div>
                         </div>
